@@ -1186,7 +1186,7 @@ sub vectors_import_from_string {
     $blurb = 'Import paths from an SVG string.';
 
     $help = <<'HELP';
-This procedure works like gimp_vectors_new_from_file() but takes a string
+This procedure works like gimp_vectors_import_from_file() but takes a string
 rather than reading the SVG from a file. This allows you to write scripts that
 generate SVG and feed it to GIMP.
 HELP
